--- a/less/app.less
+++ b/less/app.less
@@ -730,6 +730,8 @@ footer.footer {
 				word-break: break-all;
 				margin: 10px;
 				margin-top: 30px;
+				max-height: 250px;
+				overflow-y: auto;
 
 				.c-table {
 					width: 100%;
