Add spider and table chart for HMD dashboard tab.

--- a/less/modal.less
+++ b/less/modal.less
@@ -969,6 +969,19 @@ html[data-theme='dark'] {
         max-height: 405px;
         width: 100%;
       }
+      .dashboard-wrapper {
+        width: 100%;
+        height: 480px;        
+        margin-top: 25px;
+      }
+      .spider-chart {
+        float: left;
+        width: 65%;
+      }
+      .main-table {
+        float: right;
+        width: 33%;
+      }
       .scan-content {
         .list {
           max-height: 340px;
