Add and complete the File Integrity tab for HMD.

--- a/less/modal.less
+++ b/less/modal.less
@@ -971,14 +971,14 @@ html[data-theme='dark'] {
       }
       .dashboard-wrapper {
         width: 100%;
-        height: 480px;        
+        height: 480px;
         margin-top: 25px;
       }
       .spider-chart {
         float: left;
         width: 65%;
       }
-      .main-table {
+      .main-table.score {
         float: right;
         width: 33%;
       }
