Complete HMD settings tab.

--- a/less/app.less
+++ b/less/app.less
@@ -1681,7 +1681,7 @@ i.c-checkbox.fg-checkbox {
                   color: #fff;
                   padding: 8px 10px;
                   margin: 2px;
-                  background-color: var(--formEmailGroup);
+                  background-color: var(--primaryContentHeader);
                 }
               }
               .ip-range-group,
