Complete the HMD Settings dialog. Code refactor for Alert dialog.

--- a/less/app.less
+++ b/less/app.less
@@ -1675,6 +1675,9 @@ i.c-checkbox.fg-checkbox {
                 display: flex;
                 flex-wrap: wrap;
                 background-color: var(--formBackground);
+                input {
+                  margin-left: 2px;
+                }
                 [data-tag] {
                   font-size: 14px;
                   font-weight: normal;
