--- a/less/modal.less
+++ b/less/modal.less
@@ -486,6 +486,9 @@ html[data-theme='dark'] {
   .react-multi-email {
     display: flex;
     flex-wrap: wrap;
+    input {
+      margin-left: 2px;
+    }
     [data-tag] {
       font-size: 14px;
       font-weight: normal;
@@ -573,6 +576,20 @@ html[data-theme='dark'] {
         .empty-msg {
           margin-top: 10px;
         }
+      }
+      .dashboard-wrapper {
+        width: 100%;
+        margin-top: 25px;
+        overflow-y: auto;
+      }
+      .spider-chart {
+        float: left;
+        width: 65%;
+      }
+      .main-table.score {
+        float: right;
+        width: 32%;
+        margin-right: 1%;
       }
       .scan-content {
         margin-top: 10px;
@@ -698,14 +715,20 @@ html[data-theme='dark'] {
       }
       .settings {
         position: relative;
+        .settings-wrapper {
+          overflow-y: auto;
+        }
         .options-btn {
           float: right;
           margin-top: 10px;
+          margin-right: 10px;
+          .btn {
+            padding: .3em .5em;
+          }
           .restore-default,
           .save,
           .cancel {
             float: right;
-            padding: .3em .5em;
           }
           .restore-default,
           .save {
@@ -747,6 +770,9 @@ html[data-theme='dark'] {
             display: flex;
             flex-wrap: wrap;
             background-color: var(--formBackground);
+            input {
+              margin-left: 2px;
+            }
             [data-tag] {
               font-size: 14px;
               font-weight: normal;
@@ -947,7 +973,7 @@ html[data-theme='dark'] {
       .srcIp-content,
       .destIp-content {
         margin-top: 30px;
-        max-height: 395px;
+        height: 370px;
         overflow-y: auto;
       }
       .srcIp-content,
@@ -982,8 +1008,11 @@ html[data-theme='dark'] {
         padding: .3em .5em;
       }
       .table-data {
-        max-height: 395px;
+        height: 345px;
         overflow-y: auto;
+        .network-behavior {
+          width: 50%;
+        }
         .severity-level {
           display: block;
           color: #fff;
@@ -995,8 +1024,6 @@ html[data-theme='dark'] {
       }
     }
   }
-}
-#dashboardModalDialog-content {
   .scan-info {
     min-height: 365px;
     padding: 0;
@@ -1004,19 +1031,25 @@ html[data-theme='dark'] {
     border: none;
     .info-content {
       .table {
+        width: 100%;
         max-height: 315px;
-        width: 670px;
       }
       .scan-content {
         .list {
           max-height: 245px;
         }
       }
+      .dashboard-wrapper {
+        height: 365px;
+      }
       .scan-wrapper {
         margin-top: 5px;
         .scan-section {
           width: 99%;
         }
+      }
+      .settings-wrapper {
+        height: 340px;
       }
     }
   }
@@ -1031,23 +1064,13 @@ html[data-theme='dark'] {
         max-height: 405px;
         width: 100%;
       }
-      .dashboard-wrapper {
-        width: 100%;
-        height: 480px;
-        margin-top: 25px;
-      }
-      .spider-chart {
-        float: left;
-        width: 65%;
-      }
-      .main-table.score {
-        float: right;
-        width: 33%;
-      }
       .scan-content {
         .list {
           max-height: 340px;
         }
+      }
+      .dashboard-wrapper {
+        height: 480px;
       }
       .scan-wrapper {
         min-height: 440px;
@@ -1055,6 +1078,9 @@ html[data-theme='dark'] {
           width: 99%;
         }
       }
+      .settings-wrapper {
+        height: 455px;
+      }      
     }
   }
 }
