--- a/less/app.less
+++ b/less/app.less
@@ -334,6 +334,14 @@ i.c-checkbox.fg-checkbox {
     padding: 10px 5px;
     border-radius: 5px;
     background-color: var(--leftTreeGroup);
+    .branch,
+    .leaf {
+      padding: 0 0 0 .7em;
+    }
+    & > .branch,
+    & > .leaf {
+      padding-left: 0;
+    }
     i.c-checkbox {
       color: var(--buttonSelectedColor);
       &.fg-checkbox {
@@ -345,6 +353,10 @@ i.c-checkbox.fg-checkbox {
       &.fg-checkbox-outline:hover:not(.disabled) {
         color: var(--chartAxisLabelColor);
       }
+    }
+    .children .branch:before,
+    .leaf:before {
+      width: .7em;
     }
     .children .branch:last-child:before,
     .leaf:last-child:before {
@@ -1072,9 +1084,9 @@ i.c-checkbox.fg-checkbox {
       .c-hierarchy {
         .button {
           display: none;
-          font-size: .5em;
+          font-size: .4em;
           color: var(--buttonTextColor);
-          padding: .1em .8em;
+          padding: .1em .5em;
           border-radius: 5px;
           background-color: var(--buttonBackground);
           &.active {
