--- a/less/app.less
+++ b/less/app.less
@@ -2577,3 +2577,17 @@ i.c-checkbox.fg-checkbox {
     }
   }
 }
+
+.uif-dashboard {
+  .layout-hoc {
+    background-color: white;
+  }
+  .dashboard-item {
+    width: 100%;
+    height: 100%;
+
+    div {
+      height: 100%;
+    }
+  }
+}
