Change query filter input to textarea.

--- a/less/modal.less
+++ b/less/modal.less
@@ -1277,6 +1277,9 @@ html[data-theme='dark'] {
     .filter-inputbox {
       width: 293px;
       height: 35px;
+      color: var(--primaryTextColor);
+      border: 1px solid var(--formInputBorderColor);
+      background-color: var(--formBackground);
     }
     .mark-inputbox {
       width: 200px;
