Add and implement Scan File Yara Rule dialog.

--- a/less/modal.less
+++ b/less/modal.less
@@ -192,6 +192,20 @@ html[data-theme='dark'] {
   .button-group {
     margin: 10px;
   }
+  .form-group {
+    label {
+      display: block;
+      text-align: left;
+      font-size: .9em;
+      color: var(--primaryContentHeader);
+      margin-bottom: 3px;
+    }
+    .group {
+      width: 100%;
+      padding: 5px;
+      text-align: left;
+    }
+  }
 }
 #modalWindowSmall {
   #modalWindowSmall-dialog {
@@ -1496,4 +1510,7 @@ html[data-theme='dark'] {
       background-color: var(--formBackground);
     }
   }
+}
+#yaraRuleDialog-content {
+  width: 600px;
 }
