Add trigger rule dialog in Alert rule dialog and severity tree.

--- a/less/app.less
+++ b/less/app.less
@@ -1093,6 +1093,13 @@ i.c-checkbox.fg-checkbox {
             display: inline-block;
           }
         }
+        .fg-info {
+          display: none;
+          &.active {
+            position: absolute;
+            display: inline-block;
+          }
+        }
       }
       .analysis-type {
         margin-bottom: 10px;
