Complete HMD Scan Process file path list and yara rule list.

--- a/less/modal.less
+++ b/less/modal.less
@@ -590,7 +590,9 @@ html[data-theme='dark'] {
               color: var(--primaryTextColor);
               padding: 5px 10px 8px 10px;
               background-color: var(--primaryContentBackground);
-              cursor: pointer;
+              &.pointer {
+                cursor: pointer;
+              }
               i.fg {
                 height: 24px;
                 margin-right: 10px;
