Add Upgrade button for Edge. Bug fixes and wordings update.

--- a/less/app.less
+++ b/less/app.less
@@ -1623,6 +1623,12 @@ i.c-checkbox.fg-checkbox {
                 padding: .3em 1em;
               }
             }
+            .nettrap-upgrade {
+              position: absolute;
+              top: -45px;
+              right: 75px;
+              padding: .3em 1em;
+            }
             .toggle-btn {
               position: absolute;
               top: -40px;
