Minor updates based on requests.

--- a/less/app.less
+++ b/less/app.less
@@ -2249,7 +2249,9 @@ i.c-checkbox.fg-checkbox {
                   border-radius: 10px;
                 }
               }
-              &.description {
+              &.descriptionEdge {
+                white-space: pre-wrap;
+                word-break: break-all;
                 span.header {
                   color: var(--primaryContentHeader);
                 }
