--- a/less/app.less
+++ b/less/app.less
@@ -527,7 +527,7 @@ i.c-checkbox.fg-checkbox {
   .spot-big .gis-spot {
     animation-name: spotChange;
     animation-duration: 1s;
-    animation-iteration-count: 5;
+    animation-iteration-count: infinite;
   }
   @keyframes spotChange {
     0%   {opacity: 1;}
