--- a/less/app.less
+++ b/less/app.less
@@ -524,6 +524,20 @@ i.c-checkbox.fg-checkbox {
     stroke-opacity: .8;
     stroke-width: 2;
   }
+  .gis-polyline {
+    stroke-dasharray: 1000;
+    stroke-dashoffset: 1000;
+    animation-name: dash;
+    animation-duration: 4s;
+    animation-iteration-count: infinite;
+    animation-timing-function: linear;
+    animation-fill-mode: forwards;
+  }
+  @keyframes dash {
+    to {
+      stroke-dashoffset: 0;
+    }
+  }  
   .spot-big .gis-spot {
     animation-name: spotChange;
     animation-duration: 1s;
