Put email settings together with alert settings for Syslog open/save query dialog.

--- a/less/modal.less
+++ b/less/modal.less
@@ -1330,9 +1330,13 @@ html[data-theme='dark'] {
     .period {
       color: var(--primaryContentHeader);
       margin-top: 5px;
+      margin-bottom: 10px;
       input.number {
         width: 65px;
       }
+    }
+    .email-disabled {
+      height: 44px;
     }
   }
   #patternCheckbox {
