Update Syslog Pattern periodMin and threshold logic.

--- a/less/modal.less
+++ b/less/modal.less
@@ -1251,7 +1251,7 @@ html[data-theme='dark'] {
 /* common/query-open-save */
 #queryDialog-dialog {
   #queryDialog-content {
-    max-width: 428px;
+    max-width: 460px;
   }
   label {
     color: var(--linkColor);
@@ -1331,7 +1331,7 @@ html[data-theme='dark'] {
       color: var(--primaryContentHeader);
       margin-top: 5px;
       margin-bottom: 10px;
-      input.number {
+      .number {
         width: 65px;
       }
     }
