--- a/less/app.less
+++ b/less/app.less
@@ -1452,7 +1452,8 @@ i.c-checkbox.fg-checkbox {
               margin: 0 5px;
             }
           }
-          input.number {
+          input.number,
+          select.number {
             width: 65px;
           }
           .form-group { //For individual form group
