--- a/less/app.less
+++ b/less/app.less
@@ -528,13 +528,13 @@ i.c-checkbox.fg-checkbox {
     stroke-width: 2;
   }
   .gis-polyline {
-    stroke-dasharray: 1000;
+    /*stroke-dasharray: 1000;
     stroke-dashoffset: 1000;
     animation-name: dash;
     animation-duration: 4s;
     animation-iteration-count: infinite;
     animation-timing-function: linear;
-    animation-fill-mode: forwards;
+    animation-fill-mode: forwards;*/
   }
   @keyframes dash {
     0%   {opacity: .1;}
@@ -549,8 +549,8 @@ i.c-checkbox.fg-checkbox {
   }
   @keyframes spotChange {
     0%   {opacity: 1;}
-    50%  {opacity: .3; }
-    100% {opacity: 1; }
+    50%  {opacity: .3;}
+    100% {opacity: 1;}
   }
 }
 #gisMap {
