--- a/less/app.less
+++ b/less/app.less
@@ -512,29 +512,34 @@ i.c-checkbox.fg-checkbox {
     display: none;
   }
   .leaflet-container {
-    //background: -webkit-linear-gradient(top, var(--gisMapBackground), var(--subHeaderBackground))
+    background-color: #303030;
   }
-  .leaflet-tile-container img,
-  .leaflet-overlay-pane img {
-    filter: grayscale(100%);
-  }
+  // .leaflet-tile-container img,
+  // .leaflet-overlay-pane img {
+  //   filter: grayscale(100%);
+  // }
   .gis-spot {
     border-width: 0;
   }
   .leaflet-marker-icon.leaflet-interactive,
   .leaflet-image-layer.leaflet-interactive,
   .leaflet-pane > svg path.leaflet-interactive {
-    stroke-opacity: .8;
+    stroke-opacity: 1;
     stroke-width: 2;
   }
+  .gis-geojson {
+    stroke: #303030;
+    fill: #424242;
+    fill-opacity: 0.8;
+  }
   .gis-polyline {
-    /*stroke-dasharray: 1000;
+    stroke-dasharray: 1000;
     stroke-dashoffset: 1000;
     animation-name: dash;
     animation-duration: 4s;
     animation-iteration-count: infinite;
     animation-timing-function: linear;
-    animation-fill-mode: forwards;*/
+    animation-fill-mode: forwards;
   }
   @keyframes dash {
     0%   {opacity: .1;}
