Complete Config Syslog Pattern page.

--- a/less/app.less
+++ b/less/app.less
@@ -2136,12 +2136,12 @@ i.c-checkbox.fg-checkbox {
           tbody tr {
             height: 45px;
           }
-          td.property {
+          td.patternName {
             .flex-item {
               display: flex;
               flex-wrap: wrap;
             }
-            .permit {
+            .item {
               font-size: 15px;
               color: #fff;
               padding: 5px 10px;
