--- a/less/modal.less
+++ b/less/modal.less
@@ -315,6 +315,7 @@ html[data-theme='dark'] {
     color: var(--primaryTextColor);
     label {
       display: block;
+      color: var(--primaryContentHeader);
       margin-bottom: 3px;
       span {
         color: #da364a;
