Update logic for adding new pattern. Various bugs fix.

--- a/less/app.less
+++ b/less/app.less
@@ -710,6 +710,7 @@ i.c-checkbox.fg-checkbox {
         font-size: 26px;
         margin-right: 8px;
         &.not-allowed {
+          color: var(--disabledColor);
           cursor: not-allowed;
         }
       }
