--- a/less/modal.less
+++ b/less/modal.less
@@ -862,15 +862,9 @@ html[data-theme='dark'] {
       background-color: var(--contentBackground);
       .options-buttons {
         overflow: hidden;
-        div {
+        section {
+          float: right;
           cursor: pointer;
-          &.query-more {
-            float: right;
-          }
-          &.redirect-ip {
-            float: right;
-            margin-right: 5px;
-          }
         }
       }
       ul {
