--- a/less/app.less
+++ b/less/app.less
@@ -691,8 +691,9 @@ i.c-checkbox.fg-checkbox {
       }
       .count-down {
         display: inline-block;
-        margin-top: 5px;
+        margin-top: 2px;
         margin-left: 5px;
+        font-size: 1.2em;
       }
     }
   }
