Add radio group and validation for Yara Scan trigger rule.

--- a/less/modal.less
+++ b/less/modal.less
@@ -1516,4 +1516,15 @@ html[data-theme='dark'] {
 }
 #yaraRuleDialog-content {
   width: 600px;
+  .radio-group {
+    flex-direction: row;
+    margin: 10px 0;
+  }
+  .list-item {
+    margin: 0;
+    margin-right: 10px;
+    input {
+      width: 20px;
+    }
+  }
 }
