--- a/less/app.less
+++ b/less/app.less
@@ -759,16 +759,18 @@ i.c-checkbox.fg-checkbox {
         border-radius: 5px;
         padding: 10px;
         margin-bottom: 6px;
-        opacity: .6;
+        opacity: .8;
         background-color: #000;
         overflow: hidden;
         .count {
           float: left;
-          width: 15px;
-          font-size: 10px;
           color: #fff;
+          font-size: 14px;
+          min-width: 20px;
           margin-top: 3px;
           margin-right: 8px;
+          margin-bottom: 5px;
+          padding: 0px 5px;
           text-align: center;
           border-radius: 4px;
         }
