--- a/less/app.less
+++ b/less/app.less
@@ -521,7 +521,7 @@ i.c-checkbox.fg-checkbox {
     animation-name: path;
     //stroke-dasharray: 1000;
     stroke-dashoffset: 1000;
-    //animation-duration: 5s;
+    animation-duration: 5s;
     animation-iteration-count: infinite;
     animation-timing-function: linear;
     animation-fill-mode: forwards;
